// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Component should allow alternate array and object options: key value object 1`] = `[]`;

exports[`Select Component should allow alternate array and object options: key value object 2`] = `
[
  {
    "index": 0,
    "isSelected": true,
    "key": "c-286108050bG9yZW0=",
    "title": "lorem",
    "value": "ipsum",
  },
  {
    "index": 1,
    "isSelected": true,
    "key": "c-775787844KCkgPT4gJ2hlbGxvJw==",
    "title": [Function],
    "value": "world",
  },
]
`;

exports[`Select Component should allow alternate array and object options: string array 1`] = `
[
  {
    "index": 0,
    "isSelected": false,
    "key": "c-1948593631bG9yZW0=",
    "title": "lorem",
    "value": "lorem",
  },
  {
    "index": 1,
    "isSelected": true,
    "key": "c-286108050aXBzdW0=",
    "title": "ipsum",
    "value": "ipsum",
  },
  {
    "index": 2,
    "isSelected": false,
    "key": "c-1495263236aGVsbG8=",
    "title": "hello",
    "value": "hello",
  },
  {
    "index": 3,
    "isSelected": false,
    "key": "c-775787844d29ybGQ=",
    "title": "world",
    "value": "world",
  },
]
`;

exports[`Select Component should allow alternate array and object options: undefined options 1`] = `[]`;

exports[`Select Component should allow being disabled with missing options: no options 1`] = `
<select
  props="{
  "children": []
}"
>
  <div
    class="curiosity-select curiosity-select__inline"
  >
    <button
      aria-expanded="false"
      class="pf-v5-c-menu-toggle pf-m-disabled curiosity-select-pf__toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-7"
      data-ouia-component-type="PF5/MenuToggle"
      data-ouia-safe="true"
      disabled=""
      type="button"
    >
      <span
        class="pf-v5-c-menu-toggle__text"
      >
        Select option
      </span>
      <span
        class="pf-v5-c-menu-toggle__controls"
      >
        <span
          class="pf-v5-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v5-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</select>
`;

exports[`Select Component should allow being disabled with missing options: options, but disabled 1`] = `
<select
  props="{
  "options": [
    "lorem",
    "ipsum",
    "hello",
    "world"
  ],
  "isDisabled": true,
  "children": []
}"
>
  <div
    class="curiosity-select curiosity-select__inline"
  >
    <button
      aria-expanded="false"
      class="pf-v5-c-menu-toggle pf-m-disabled curiosity-select-pf__toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-9"
      data-ouia-component-type="PF5/MenuToggle"
      data-ouia-safe="true"
      disabled=""
      type="button"
    >
      <span
        class="pf-v5-c-menu-toggle__text"
      >
        ipsum
      </span>
      <span
        class="pf-v5-c-menu-toggle__controls"
      >
        <span
          class="pf-v5-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v5-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</select>
`;

exports[`Select Component should allow being disabled with missing options: options, but no content 1`] = `
<select
  props="{
  "options": [],
  "children": []
}"
>
  <div
    class="curiosity-select curiosity-select__inline"
  >
    <button
      aria-expanded="false"
      class="pf-v5-c-menu-toggle pf-m-disabled curiosity-select-pf__toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-8"
      data-ouia-component-type="PF5/MenuToggle"
      data-ouia-safe="true"
      disabled=""
      type="button"
    >
      <span
        class="pf-v5-c-menu-toggle__text"
      >
        Select option
      </span>
      <span
        class="pf-v5-c-menu-toggle__controls"
      >
        <span
          class="pf-v5-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v5-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</select>
`;

exports[`Select Component should allow data- props: data- attributes 1`] = `
<button
  aria-expanded="false"
  class="pf-v5-c-menu-toggle pf-m-disabled curiosity-select-pf__toggle"
  data-dolor-sit="dolor sit"
  data-lorem="ipsum"
  data-ouia-component-id="OUIA-Generated-MenuToggle-11"
  data-ouia-component-type="PF5/MenuToggle"
  data-ouia-safe="true"
  disabled=""
  type="button"
>
  <span
    class="pf-v5-c-menu-toggle__text"
  >
    Select option
  </span>
  <span
    class="pf-v5-c-menu-toggle__controls"
  >
    <span
      class="pf-v5-c-menu-toggle__toggle-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v5-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 320 512"
        width="1em"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        />
      </svg>
    </span>
  </span>
</button>
`;

exports[`Select Component should allow disabled options: disabled options 1`] = `
<ul
  aria-multiselectable="false"
  class="pf-v5-c-menu__list"
  role="listbox"
>
  <li
    class="pf-v5-c-menu__list-item curiosity-select-pf__option"
    role="menu"
  >
    <button
      aria-selected="false"
      class="pf-v5-c-menu__item curiosity-select-pf__option"
      id="c-1948593631bG9yZW0="
      role="option"
      tabindex="0"
      type="button"
    >
      <span
        class="pf-v5-c-menu__item-main"
      >
        <span
          class="pf-v5-c-menu__item-text"
        >
          lorem
        </span>
      </span>
    </button>
  </li>
  <li
    class="pf-v5-c-menu__list-item pf-m-disabled curiosity-select-pf__option"
    role="menu"
  >
    <button
      aria-selected="false"
      class="pf-v5-c-menu__item curiosity-select-pf__option"
      disabled=""
      id="c-286108050dW5kZWZpbmVk"
      role="option"
      tabindex="-1"
      type="button"
    >
      <span
        class="pf-v5-c-menu__item-main"
      >
        <span
          class="pf-v5-c-menu__item-text"
        />
      </span>
    </button>
  </li>
  <li
    class="pf-v5-c-menu__list-item curiosity-select-pf__option"
    role="menu"
  >
    <button
      aria-selected="false"
      class="pf-v5-c-menu__item curiosity-select-pf__option"
      id="c-1495263236aGVsbG8="
      role="option"
      tabindex="-1"
      type="button"
    >
      <span
        class="pf-v5-c-menu__item-main"
      >
        <span
          class="pf-v5-c-menu__item-text"
        >
          hello
        </span>
      </span>
    </button>
  </li>
  <li
    class="pf-v5-c-menu__list-item pf-m-disabled curiosity-select-pf__option"
    role="menu"
  >
    <button
      aria-selected="false"
      class="pf-v5-c-menu__item curiosity-select-pf__option"
      disabled=""
      id="c-775787844dW5kZWZpbmVk"
      role="option"
      tabindex="-1"
      type="button"
    >
      <span
        class="pf-v5-c-menu__item-main"
      >
        <span
          class="pf-v5-c-menu__item-text"
        />
      </span>
    </button>
  </li>
</ul>
`;

exports[`Select Component should allow plain objects as values, and be able to select options based on values within the object: select when option values are objects 1`] = `
[
  {
    "index": 0,
    "isSelected": false,
    "key": "c169715889bG9yZW0=",
    "title": "lorem",
    "value": {
      "dolor": "sit",
    },
  },
  {
    "index": 1,
    "isSelected": false,
    "key": "c-679636502ZG9sb3I=",
    "title": "dolor",
    "value": {
      "lorem": "ipsum",
    },
  },
  {
    "index": 2,
    "isSelected": true,
    "key": "c-519357997aGVsbG8=",
    "title": "hello",
    "value": {
      "hello": "world",
    },
  },
]
`;

exports[`Select Component should disable toggle text: disabled text 1`] = `
<button
  aria-expanded="false"
  class="pf-v5-c-menu-toggle curiosity-select-pf__toggle"
  data-ouia-component-id="OUIA-Generated-MenuToggle-6"
  data-ouia-component-type="PF5/MenuToggle"
  data-ouia-safe="true"
  type="button"
>
  <span
    class="pf-v5-c-menu-toggle__icon"
  >
    <svg
      aria-hidden="true"
      class="pf-v5-svg"
      fill="currentColor"
      height="1em"
      role="img"
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
      />
    </svg>
  </span>
  <span
    class="pf-v5-c-menu-toggle__text"
  />
  <span
    class="pf-v5-c-menu-toggle__controls"
  >
    <span
      class="pf-v5-c-menu-toggle__toggle-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v5-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 320 512"
        width="1em"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        />
      </svg>
    </span>
  </span>
</button>
`;

exports[`Select Component should emulate pf dropdown: emulated dropdown 1`] = `
<select
  props="{
  "variant": "dropdown",
  "toggle": {
    "variant": "secondary"
  },
  "options": [
    "lorem",
    "ipsum",
    "hello",
    "world"
  ],
  "children": []
}"
>
  <div
    class="curiosity-select curiosity-select__inline"
  >
    <button
      aria-expanded="false"
      class="pf-v5-c-menu-toggle pf-m-secondary curiosity-select-pf__toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-secondary-1"
      data-ouia-component-type="PF5/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v5-c-menu-toggle__text"
      >
        Select option
      </span>
      <span
        class="pf-v5-c-menu-toggle__controls"
      >
        <span
          class="pf-v5-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v5-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</select>
`;

exports[`Select Component should render a basic component: basic component 1`] = `
<select
  props="{
  "id": "test",
  "options": [
    {
      "title": "lorem",
      "value": "ipsum"
    },
    {
      "title": "hello",
      "value": "world",
      "selected": true
    }
  ],
  "children": []
}"
>
  <div
    class="curiosity-select curiosity-select__inline"
  >
    <button
      aria-expanded="false"
      class="pf-v5-c-menu-toggle curiosity-select-pf__toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-1"
      data-ouia-component-type="PF5/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v5-c-menu-toggle__text"
      >
        Select option
      </span>
      <span
        class="pf-v5-c-menu-toggle__controls"
      >
        <span
          class="pf-v5-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v5-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</select>
`;

exports[`Select Component should render a checkbox select: checkbox select 1`] = `
<select
  props="{
  "id": "test",
  "options": [
    {
      "title": "lorem",
      "value": "ipsum"
    },
    {
      "title": "hello",
      "value": "world",
      "selected": true
    }
  ],
  "selectedOptions": [
    "world",
    "ipsum"
  ],
  "variant": "checkbox",
  "placeholder": "multiselect test",
  "children": []
}"
>
  <div
    class="curiosity-select curiosity-select__inline"
  >
    <button
      aria-expanded="false"
      class="pf-v5-c-menu-toggle curiosity-select-pf__toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-2"
      data-ouia-component-type="PF5/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v5-c-menu-toggle__text"
      >
        multiselect test 
        <span
          class="pf-v5-c-badge pf-m-read"
        >
          2
        </span>
      </span>
      <span
        class="pf-v5-c-menu-toggle__controls"
      >
        <span
          class="pf-v5-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v5-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</select>
`;

exports[`Select Component should render an expanded select: expanded 1`] = `
<ul
  aria-multiselectable="false"
  class="pf-v5-c-menu__list"
  role="listbox"
>
  <li
    class="pf-v5-c-menu__list-item curiosity-select-pf__option"
    role="menu"
  >
    <button
      aria-selected="false"
      class="pf-v5-c-menu__item curiosity-select-pf__option"
      id="c-1948593631bG9yZW0="
      role="option"
      tabindex="0"
      type="button"
    >
      <span
        class="pf-v5-c-menu__item-main"
      >
        <span
          class="pf-v5-c-menu__item-text"
        >
          lorem
        </span>
      </span>
    </button>
  </li>
  <li
    class="pf-v5-c-menu__list-item curiosity-select-pf__option"
    role="menu"
  >
    <button
      aria-selected="true"
      class="pf-v5-c-menu__item pf-m-selected curiosity-select-pf__option"
      id="c-286108050aXBzdW0="
      role="option"
      tabindex="-1"
      type="button"
    >
      <span
        class="pf-v5-c-menu__item-main"
      >
        <span
          class="pf-v5-c-menu__item-text"
        >
          ipsum
        </span>
        <span
          class="pf-v5-c-menu__item-select-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v5-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            />
          </svg>
        </span>
      </span>
    </button>
  </li>
  <li
    class="pf-v5-c-menu__list-item curiosity-select-pf__option"
    role="menu"
  >
    <button
      aria-selected="false"
      class="pf-v5-c-menu__item curiosity-select-pf__option"
      id="c-1495263236aGVsbG8="
      role="option"
      tabindex="-1"
      type="button"
    >
      <span
        class="pf-v5-c-menu__item-main"
      >
        <span
          class="pf-v5-c-menu__item-text"
        >
          hello
        </span>
      </span>
    </button>
  </li>
  <li
    class="pf-v5-c-menu__list-item curiosity-select-pf__option"
    role="menu"
  >
    <button
      aria-selected="false"
      class="pf-v5-c-menu__item curiosity-select-pf__option"
      id="c-775787844d29ybGQ="
      role="option"
      tabindex="-1"
      type="button"
    >
      <span
        class="pf-v5-c-menu__item-main"
      >
        <span
          class="pf-v5-c-menu__item-text"
        >
          world
        </span>
      </span>
    </button>
  </li>
</ul>
`;

exports[`Select Component should return an emulated onchange event, checklist variant: checklist emulated event, last item checked 1`] = `
[
  [
    {
      "checked": false,
      "currentTarget": <input
        aria-disabled="false"
        aria-invalid="false"
        class="pf-v5-c-check__input"
        data-ouia-component-id="OUIA-Generated-Checkbox-1"
        data-ouia-component-type="PF5/Checkbox"
        data-ouia-safe="true"
        id="pf-random-id-4"
        type="checkbox"
      />,
      "id": "pf-random-id-4",
      "keyCode": undefined,
      "name": "",
      "persist": [Function],
      "selected": [
        {
          "index": 0,
          "isSelected": true,
          "key": "c-1948593631bG9yZW0=",
          "title": "lorem",
          "value": "lorem",
        },
        {
          "index": 1,
          "isSelected": true,
          "key": "c-286108050aXBzdW0=",
          "title": "ipsum",
          "value": "ipsum",
        },
      ],
      "selectedIndex": [
        0,
        1,
      ],
      "target": <input
        aria-disabled="false"
        aria-invalid="false"
        class="pf-v5-c-check__input"
        data-ouia-component-id="OUIA-Generated-Checkbox-1"
        data-ouia-component-type="PF5/Checkbox"
        data-ouia-safe="true"
        id="pf-random-id-4"
        type="checkbox"
      />,
      "type": "select-multiple",
      "value": [
        "lorem",
        "ipsum",
      ],
    },
  ],
  [
    {
      "checked": false,
      "currentTarget": <input
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="pf-v5-c-check__input"
        data-ouia-component-id="OUIA-Generated-Checkbox-2"
        data-ouia-component-type="PF5/Checkbox"
        data-ouia-safe="true"
        id="pf-random-id-5"
        type="checkbox"
      />,
      "id": "pf-random-id-5",
      "keyCode": undefined,
      "name": "",
      "persist": [Function],
      "selected": [
        {
          "index": 0,
          "isSelected": true,
          "key": "c-1948593631bG9yZW0=",
          "title": "lorem",
          "value": "lorem",
        },
      ],
      "selectedIndex": [
        0,
      ],
      "target": <input
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="pf-v5-c-check__input"
        data-ouia-component-id="OUIA-Generated-Checkbox-2"
        data-ouia-component-type="PF5/Checkbox"
        data-ouia-safe="true"
        id="pf-random-id-5"
        type="checkbox"
      />,
      "type": "select-multiple",
      "value": [
        "lorem",
      ],
    },
  ],
]
`;

exports[`Select Component should return an emulated onchange event: default emulated event 1`] = `
[
  [
    {
      "checked": undefined,
      "currentTarget": <button
        aria-selected="false"
        class="pf-v5-c-menu__item curiosity-select-pf__option"
        id="c-1948593631bG9yZW0="
        role="option"
        tabindex="0"
        type="button"
      >
        <span
          class="pf-v5-c-menu__item-main"
        >
          <span
            class="pf-v5-c-menu__item-text"
          >
            lorem
          </span>
        </span>
      </button>,
      "id": "c-1948593631bG9yZW0=",
      "keyCode": undefined,
      "name": "",
      "persist": [Function],
      "selected": {
        "index": 0,
        "isSelected": true,
        "key": "c-1948593631bG9yZW0=",
        "title": "lorem",
        "value": "lorem",
      },
      "selectedIndex": [
        0,
      ],
      "target": <button
        aria-selected="false"
        class="pf-v5-c-menu__item curiosity-select-pf__option"
        id="c-1948593631bG9yZW0="
        role="option"
        tabindex="0"
        type="button"
      >
        <span
          class="pf-v5-c-menu__item-main"
        >
          <span
            class="pf-v5-c-menu__item-text"
          >
            lorem
          </span>
        </span>
      </button>,
      "type": "select-one",
      "value": "lorem",
    },
  ],
]
`;
